# aube

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.i18n  TODO  acconfig.h  acinclude.m4  aclocal.m4  aube.1  aube_logo.ppm  autogen.sh  bootstrap.sh  config.h.in  configure  configure.ac  configure.in
m4/: Makefile.am
po/: ChangeLog  Makevars  POTFILES.in
src/: Makefile.am  Makefile.in  about_dialog.c  about_dialog.h  aube.c  aube.h  aube_error.c  aube_error.h  gtkaube.h  i18n.h  inputoption.c  inputoption.h  interface.c  interface.h  levelmeter.c  levelmeter.h  master.c  master.h  modulemenu.c  modulemenu.h  modulewindow.c  modulewindow.h  none.c  none.h  none_config.c  none_config.h  opsmenu.c  opsmenu.h  outputlabel.c  outputlabel.h  preferences.c  preferences.h  sample.c  sample.h  sample_if.c  sample_if.h  slider.c  slider.h  tables.c
src/modules/: Makefile.am  Makefile.in  atonal.c  atonal.h  atonal_if.c  atonal_if.h  bilinear.c  delay.c  delay.h  delay_if.c  delay_if.h  drummachine.c  drummachine.h  drummachine_if.c  drummachine_if.h  filter_reslp.c  filter_reslp.h  filter_reslp_if.c  filter_reslp_if.h  general_mixer.c  general_mixer.h  general_mixer_if.c  general_mixer_if.h  klav.c  klav.h  klavier.c  klavier.h  klavier_if.c  klavier_if.h  line.c  line.h  linein_if.c  linein_if.h  lineout_if.c  lineout_if.h  minimaube.c  minimaube.h  minimaube_if.c  minimaube_if.h  minitracker.c  (+31 more)
