dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/aube.h)

AM_INIT_AUTOMAKE(aube, 0.30.2)

dnl Specify a header configuration file
AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Initialize maintainer mode
AM_MAINTAINER_MODE


dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries
AM_PATH_AUDIOFILE(0.1.5, AC_DEFINE(HAVE_LIBAUDIOFILE))

AM_PATH_GTK(1.0.0, , echo "EEEEEK No GTK")
#AM_PATH_GENERIC(xml, 0.99.0)

AC_CHECK_LIB (gdk_imlib, gdk_imlib_init)

dnl Test for libXpm
AC_CHECK_LIB(Xpm, XpmReadFileToXpmImage)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h strings.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

test x$GCC = xyes && CFLAGS="-Wall $CFLAGS"

AC_OUTPUT(
Makefile
src/Makefile
src/modules/Makefile
)
