## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libmodules.a

libmodules_a_SOURCES = \
	atonal.c		\
	atonal.h		\
	atonal_if.c		\
	atonal_if.h		\
	delay.c			\
	delay.h			\
	delay_if.c		\
	delay_if.h		\
	drummachine.c		\
	drummachine.h		\
	drummachine_if.c	\
	drummachine_if.h	\
	bilinear.c		\
	filter_reslp.c		\
	filter_reslp.h		\
	filter_reslp_if.c	\
	filter_reslp_if.h	\
	general_mixer.c		\
	general_mixer.h		\
	general_mixer_if.c	\
	general_mixer_if.h	\
	klav.c			\
	klav.h			\
	klavier.c		\
	klavier.h		\
	klavier_if.c		\
	klavier_if.h		\
	minimaube.c		\
	minimaube.h		\
	minimaube_if.c		\
	minimaube_if.h		\
	minitracker.c		\
	minitracker.h		\
	minitracker_if.c	\
	minitracker_if.h	\
	line.c			\
	line.h			\
	linein_if.c		\
	linein_if.h		\
	lineout_if.c		\
	lineout_if.h		\
	panner.c		\
	panner.h		\
	panner4.c		\
	panner4.h		\
	panner4_if.c		\
	panner4_if.h		\
	panner_if.c		\
	panner_if.h		\
	reslp.c			\
	reslp.h			\
	sample_recorder.c	\
	sample_recorder.h	\
	sample_recorder_if.c	\
	sample_recorder_if.h	\
	syre.c			\
	syre.h			\
	syre_if.c		\
	syre_if.h		\
	waves.c			\
	waves.h			\
	whitenoise.c		\
	whitenoise.h		\
	whitenoise_if.c		\
	whitenoise_if.h		\
	xfader.c		\
	xfader.h		\
	xfader_if.c		\
	xfader_if.h

CPPFLAGS = \
	-DDATADIR=\"$(pkgdatadir)\"

CFLAGS = \
	-g -O2 -Wall

INCLUDES = -I$(top_srcdir)/src @GTK_CFLAGS@

